--- a/meropasal_f/src/index.css
+++ b/meropasal_f/src/index.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    margin: 10px;
+}
+
+input{
+    border: 1px solid black;
+    margin: 1px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+select{
+    padding: 5px;
+    border: 2px solid grey;
+}
+
+.button,button{
+    border: 2px solid blue;
+    background-color: aqua;
+}
+input:focus,select:focus,textarea:focus{
+    border-color: rgb(0, 41, 135);
+}
+
