--- a/meropasal_f/src/index.css
+++ b/meropasal_f/src/index.css
@@ -106,15 +106,38 @@ textarea:focus {
     border-color: rgb(0, 41, 135);
 }
 
+/* ==================CARD SECTION START========================= */
+.card{
+    height: 15em;
+    width: 8em;
+    display: inline-flex;
+    flex-wrap: wrap;
+    margin: 10px;
+    box-shadow: 0 0 35px rgba(0,0,0,0.7);
+    padding: 10px;
+}
+
+.card .card-image{
+    width: 98%;
+    height: 60%;
+
+}
+
+
+
+/* ==================CARD SECTION END=========================== */
 
 /* Footer section start */
 footer{
-    width: 95%;
-    height: 200px;
+    width: 100%;
+    /* height: 200px; */
     margin: auto;
     display: flex;
     color: var(--primary);
     font-size: var(--fontsmall);
+    position: relative;
+    bottom: 0;
+    background-color: rgb(15, 23, 42);
 }
 footer hr{
     width: 150px;
