--- a/meropasal_f/src/index.css
+++ b/meropasal_f/src/index.css
@@ -215,8 +215,65 @@ textarea:focus {
     background-color: var(--primarydark);
     right: 0;
 }
+.order{
+    position: absolute;
+    /* display: none; */
+    background-color: rgba(206, 209, 214,0.7);
+    inset: 0;
+    position: fixed;
 
+}
+.order > button{
+    padding: 0.8rem;
+    margin: 1rem 2rem;
+    float: right;
+    background-color: var(--accent);
+    color: var(--white);
+    border-radius: 0.5rem;
+}
 /* ==================Product Details section end=================== */
+/* ==================Order page section start====================== */
+
+.order-form{
+    width: 50%;
+    height: 25rem;
+    margin: auto;
+    border: 1px solid var(--primarydark);
+    padding: 1rem 3rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.5rem;
+    background-color: var(--primarydark);
+    color: var(--white);
+    font-weight: 600;
+    font-size: var(--fontsmall);
+}
+.order-form .order-input{
+    margin: 4rem 0;
+}
+.order-form label{
+    padding: 0.5rem;
+    margin-top: 1rem;
+}
+.order-form input,select,span,option{
+    width: 15rem;
+    color: var(--black);
+    font-weight: 600;
+    border: none;
+    border-radius: 0.5rem;
+}
+
+.order-form button{
+    width: 80%;
+    margin: auto;
+    background-color: var(--accentdim);
+    margin-top: 4rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+/* ==================Order page section end======================== */
 
 /* ==================Start of Cart section========================= */
 
@@ -225,8 +282,8 @@ textarea:focus {
 }
 
 .cart-empty{
-    position: relative;
-    left: 50%;
+    width: 30%;
+    margin: auto;
     padding: 10rem 0;
     font-size: var(--fontbig);
     font-weight: bold;
@@ -263,6 +320,7 @@ textarea:focus {
     width: 33%;
     font-size: var(--fontnormal);
     font-weight: bold;
+    
 }
 .cart-result p{
     margin: 2rem 0;
@@ -280,12 +338,7 @@ textarea:focus {
 
 /* ====================Order Page Start================================== */
 
-.order{
-    position: absolute;
-    /* display: none; */
-    background-color: rgba(206, 209, 214,0.9);
-    inset: 0;
-}
+
 
 /* ====================Order Page End =================================== */
 /* Footer section start */
