having multiple types of users in django posed some weird and complex problems like not being able to use auth token and using jwt token not being accepted because default user uses auth token and all this boiling down to causing permissions issues all over the projects that feel a bit too complex for me. Having custom authenticator for separate user is not enough and auth token doen't accept multiple user types. so I have decided to remove the use of seller user completely and only use the user given by the django model. maybe somday when I am smart enough to handle this, I will do it.

--- a/meropasal_f/src/index.css
+++ b/meropasal_f/src/index.css
@@ -35,6 +35,26 @@ img {
     opacity: 0.8;
 }
 
+input {
+    border: 1px solid black;
+    margin: 1px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+select {
+    padding: 5px;
+    border: 2px solid grey;
+}
+
+
+
+input:focus,
+select:focus,
+textarea:focus {
+    border-color: rgb(0, 41, 135);
+}
+
 /* navbaar start */
 
 nav {
@@ -95,26 +115,23 @@ nav ul li:hover{
 
 
 /* navbar stop */
+/* +===============seller register start================== */
 
-input {
-    border: 1px solid black;
-    margin: 1px;
-    padding: 5px;
-    border-radius: 5px;
+.form{
+    box-shadow: 0 0 15px rgba(0,0,0,0.4);
+    width: 60%;
+    margin: auto;
+    padding: 2rem;
+    background-color: var(--primary);
 }
 
-select {
-    padding: 5px;
-    border: 2px solid grey;
+.form input{
+    width: 10rem ;
+    margin: 0 2rem;
 }
 
 
-
-input:focus,
-select:focus,
-textarea:focus {
-    border-color: rgb(0, 41, 135);
-}
+/* +===============seller register end================== */
 
 /* ==================CARD SECTION START========================= */
 .card{
