--- a/meropasal_f/src/index.css
+++ b/meropasal_f/src/index.css
@@ -375,8 +375,8 @@ nav ul li:hover{
     margin: 2rem;
 }
 .cart-items .cart-decrease,.cart-increase,.cart-quantity,.cart-delete{
-    width: 4.5rem;
-    padding: 0.5rem;
+    width: 6rem;
+    padding: 0.8rem;
     border-radius: 0.5rem;
     margin: 0 0.4rem;
 }
@@ -403,9 +403,49 @@ nav ul li:hover{
 
 /* ==================End of Cart section=========================== */
 
-/* ====================Order Page Start================================== */
+/* ====================Orders Page Start================================== */
+.container{
+    margin: 0 2rem;
+    display: flex;
+    justify-content: center;
+}
+
+.table{
+    border: 1px solid var(--primarydark);
+    width: 80%;
+}
+.table .table-row{
+    border: 1px solid var(--primarydark);
+    align-items: center;
+    text-align: center;
+    font-size: var(--fontnormal);
+    font-weight: bold;
+    
+}
+
+.table img{
+    width: 10rem;
+    margin: 1rem;
+    border-radius: 0.5rem;
+}
+
+.table-row button{
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.table-row button:hover + .orderstatus,.orderstatus:hover{
+    display: block;
+}
 
 
+
+.orderstatus{
+    display: none;
+}
 
 /* ====================Order Page End =================================== */
 
