--- a/meropasal_f/src/index.css
+++ b/meropasal_f/src/index.css
@@ -407,6 +407,7 @@ nav ul li:hover{
     font-weight: 600;
     font-size: var(--fontsmall);
 }
+
 .order-form .order-input{
     margin: 4rem 0;
 }
@@ -583,8 +584,9 @@ footer{
     color: var(--primary);
     font-size: var(--fontsmall);
     position: relative;
+    z-index: -1 ;
     bottom: 0;
-    background-color: rgb(15, 23, 42);
+    background-color: rgba(23, 36, 64, 0.868);
 }
 footer hr{
     width: 150px;
